[gd_scene load_steps=2 format=3 uid="uid://ccardgiveui"]

[ext_resource type="Script" uid="uid://c2fvfvocg51lx" path="res://scripts/ui_components/card_give_ui.gd" id="1_card_give_ui"]

[node name="CardGiveUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_card_give_ui")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -120.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "カードの種類を選択"
horizontal_alignment = 1

[node name="CreatureButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "クリーチャー"

[node name="ItemButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "アイテム"

[node name="SpellButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "スペル"

[node name="CancelButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "キャンセル"
